--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,7 @@
   <title></title>
 </head>
 <body>
-  <button id="myButton">Algebra Calculator!</button>
+  <button id="myButton">Go To The Algebra Calculator</button>
   <style>
 
         body { background-color: #000000; }
