--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
-<button onclick="changeTitle()">Click me!</button>
+<button onclick="changeTitle()">Click me!</button> 
 <script>
+
+
 function changeTitle() {
   document.title = "about:blank";
 }
@@ -66,11 +67,15 @@ function changeTitle() {
 
 
 
+
+
         body { background-color: #000000; }
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.6.4/math.js" integrity="sha512-BbVEDjbqdN3Eow8+empLMrJlxXRj5nEitiCAK5A1pUr66+jLVejo3PmjIaucRnjlB0P9R3rBUs3g5jXc8ti+fQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.6.4/math.min.js" integrity="sha512-iphNRh6dPbeuPGIrQbCdbBF/qcqadKWLa35YPVfMZMHBSI6PLJh1om2xCTWhpVpmUyb4IvVS9iYnnYMkleVXLA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <style>
+
+
 
 
 
@@ -167,4 +172,5 @@ function changeTitle() {
                 function clr() {
                         document.getElementById("result").value = ""
                 }
-                
+</script>
+
