--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,5 @@
+<a style="margin-left: 15px;" href="https://github.com/Tacogamerman/Cloaked-Proxy-Calculator">Github Repo</a>
+
 <button onclick="changeTitle()">Click me!</button> 
 <script>
 
