--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,6 @@
-<button onclick="window.location.href='https://github.com/Tacogamerman/Cloaked-Proxy-Calculator'">Repo</button> <button onclick="changeTitle()">Click me!</button> 
+<button onclick="window.location.href='https://github.com/Tacogamerman/Cloaked-Proxy-Calculator'">Repo</button> 
+
+<button onclick="changeTitle()">Click me!</button> 
 <script>
 function changeTitle() {
   document.title = "about:blank";
