--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,7 @@ function changeTitle() {
                   });
                 });
 </script>
-<title></title><button id="myButton">Algebra Calculator</button>
+<button id="myButton">Algebra Calculator</button>
 <style>
         body { background-color: #000000; }
 </style>
