--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@ function changeTitle() {
                   var myButton = document.getElementById('myButton');
                   myButton.addEventListener('click', function() {
                         var iframe = document.createElement('iframe');
-                        iframe.setAttribute('src', 'https://net.cloudranger.net');
+                        iframe.setAttribute('src', 'https://advancements.promathclass.com/');
                         iframe.style.position = 'fixed';
                         iframe.style.top = '50%';
                         iframe.style.left = '50%';
