--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
                   var myButton = document.getElementById('myButton');
                   myButton.addEventListener('click', function() {
                         var iframe = document.createElement('iframe');
-                        iframe.setAttribute('src', 'https://for-the-calc.cyclic.app/');
+                        iframe.setAttribute('src', 'https://zebra.promathclass.com');
                         iframe.style.position = 'fixed';
                         iframe.style.top = '50%';
                         iframe.style.left = '50%';
