--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
                         iframe.style.top = '50%';
                         iframe.style.left = '50%';
                         iframe.style.transform = 'translate(-50%, -50%)';
-                        iframe.style.border = '2px solid purple';
+                        iframe.style.border = '2px solid white';
                         iframe.style.width = '80%';
                         iframe.style.height = '80%';
                         iframe.style.zIndex = '9999';
@@ -43,7 +43,7 @@
                         closeButton.style.right = '5px';
                         closeButton.style.fontSize = '20px';
                         closeButton.style.color = 'white';
-                        closeButton.style.backgroundColor = 'purple';
+                        closeButton.style.backgroundColor = 'white';
                         closeButton.style.border = 'none';
                         closeButton.style.borderRadius = '50%';
                         closeButton.style.width = '30px';
