--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
                   var myButton = document.getElementById('myButton');
                   myButton.addEventListener('click', function() {
                         var iframe = document.createElement('iframe');
-                        iframe.setAttribute('src', 'https://fky2lu-8080.csb.app/');
+                        iframe.setAttribute('src', 'https://l293qp-8080.csb.app/');
                         iframe.style.position = 'fixed';
                         iframe.style.top = '50%';
                         iframe.style.left = '50%';
