--- a/games.html
+++ b/games.html
@@ -1,6 +1,6 @@
 <head> 
     <title>
-        Slate Activities
+       Activities
     </title>
     <style>
     body { background-color: #000000; }
@@ -37,8 +37,8 @@
     }
 </style>
 <button onclick="window.location.href='/eaglercraft.html'">Eaglercraft</button>
-<button onclick="window.location.href='/piclient.html'">PiClient</button>
-<button onclick="window.location.href='/DragonX_V2.html'">DragonX</button>
+<button onclick="window.location.href='/piclient.html'">PiClient (Broken)</button>
+<button onclick="window.location.href='/DragonX_V2.html'">DragonX (Broken)/button>
 <button onclick="window.location.href='/chromedino.html'">Chrome Dino</button>
 <button onclick="window.location.href='/Evilglitch.html'">Evil Glitch</button>
 <button onclick="window.location.href='/Square.html'">Black Hole Square</button>
