--- a/games.html
+++ b/games.html
@@ -42,3 +42,5 @@
 <button onclick="window.location.href='/Square.html'">Black Hole Square</button>
 <button onclick="window.location.href='/RetroHaunt.html'">Retrohaunt</button>
 <button onclick="window.location.href='/Konekt.html'">Konekt</button>
+<button onclick="window.location.href='/chroma.html'">The Chroma Incident</button>
+
