--- a/Index.html
+++ b/Index.html
@@ -118,15 +118,15 @@
     <div id="dialogWrap">
         <div id="dialogWrapCell">
             <div id="mainDialog">
-                <div id="dialogText">This page is password protected.</div>
+                <div id="dialogText">This page is password locked.</div>
                 <div id="passArea">
                     <p id="passwordPrompt">Password</p>
                     <input id="pass" type="password" name="pass" autofocus>
                     <div>
                         <span id="messageWrapper">
-                            <span id="invalidPass" class="error">Sorry, please try again.</span>
+                            <span id="invalidPass" class="error">Sorry, the provided password was incorrect.</span>
                             <span id="trycatcherror" class="error">Sorry, something went wrong.</span>
-                            <span id="success" class="notifyText">Success!</span>
+                            <span id="success" class="notifyText">Correct!</span>
                             &nbsp;
                         </span>
                         <button id="submitPass" type="button">Submit</button>
