--- a/Index.html
+++ b/Index.html
@@ -120,7 +120,7 @@
             <div id="mainDialog">
                 <div id="dialogText">This page is password locked.</div>
                 <div id="passArea">
-                    <p id="passwordPrompt">Password</p>
+                    <p id="passwordPrompt">Password:</p>
                     <input id="pass" type="password" name="pass" autofocus>
                     <div>
                         <span id="messageWrapper">
