--- a/Index.html
+++ b/Index.html
@@ -126,7 +126,7 @@
                         <span id="messageWrapper">
                             <span id="invalidPass" class="error">Sorry, please try again.</span>
                             <span id="trycatcherror" class="error">Sorry, something went wrong.</span>
-                            <span id="success" class="notifyText">Success!</span>
+                            <span id="success" class="notifyText">Ronaldo is better though.</span>
                             &nbsp;
                         </span>
                         <button id="submitPass" type="button">Submit</button>
