Update and rename activities (1).html to activities.html

--- a/activities.html
+++ b/activities.html
@@ -36,7 +36,7 @@
         justify-content: space-around;
     }
 </style>
-<button onclick="window.location.href='/eaglercraft.html'">Eaglercraft</button>
+<button onclick="window.location.href='/Proxy.html'">Built in proxy</button>
 <button onclick="window.location.href='/chromedino.html'">Chrome Dino</button>
 <button onclick="window.location.href='/Evilglitch.html'">Evil Glitch</button>
 <button onclick="window.location.href='/Square.html'">Black Hole Square</button>
